mongoexpress-depl.yaml
#create deployment for mongoexpress
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongo-express
    labels:
        app: mongo-express
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongo-express
    template:
        metadata:
            labels:
                app: mongo-express
        spec:
          containers:
          - name: mongo-express
            image: mongo-express
            ports:
            - containerPort: 8081
            env: #environment variables the DB needs to connect
            - name: ME_CONFIG_MONGODB_ADMINUSERNAME # taken from the image use on docker hub
              valueFrom: #values are stored in secret file
                secretKeyRef:
                  name: mongodb-secret
                  key: mongo-root-username
            - name: ME_CONFIG_MONGODB_ADMINPASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongodb-secret
                  key: mongo-root-password
            - name: ME_CONFIG_MONGODB_SERVER
              valueFrom: #values are stored in config map
                configMapKeyRef:
                  name: mongodb-configmap
                  key: database_url
---  #create external service
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
spec:
  selector:
    app: mongodb #connects to the pod through the label
  type: LoadBalancer #makes the service external
  ports:
  - protocol: TCP
    port: 8081 #service port
    targetPort: 8081 # container port of deployment
    nodePort: 30000 #this port must be between 30000-32767
